--- a/components/41-organisms/timeline/_timeline.scss
+++ b/components/41-organisms/timeline/_timeline.scss
@@ -119,7 +119,7 @@ dl.timeline {
         &::before {
           position: absolute;
           left: 0;
-          font-size: 1.6em;
+          font-size: 1.2rem;
           line-height: .9;
         }
 
